--- a/res/styles.css
+++ b/res/styles.css
@@ -1,4 +1,10 @@
-﻿body {
+﻿* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     background-color: var(--body_bgcolor);
     color: var(--body_textcolor);
     font: 18pt sans-serif;
@@ -35,11 +41,13 @@ ul li:before {
     font: bold;
 }
 
-.h2b {
-    color: var(--contentcolor);
+h1 {
+    color: var(--link);
     text-align: center;
     cursor: default;
     -webkit-text-stroke-width: 1.5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .p {
@@ -52,24 +60,46 @@ ul li:before {
     min-height: 500px;
 }
 
-.p > h2 {
+.p > h2, .p > h1 {
     margin-top: 0;
     margin-bottom: 10px;
     text-align: center;
 }
 
-.p > h2::before,
-.p > h2::after {
+
+.p h2 {
+    color: black;
+    transition: color 0.5s ease;
+    -webkit-transition: color 0.5s ease;
+}
+
+.p:hover h2 {
+    color: var(--contentcolor);
+}
+
+.p h2::before,
+.p h2::after {
     display: inline-block;
     content: "";
     border-top: .3rem solid black;
     width: 4rem;
     margin: 0 1rem;
     transform: translateY(-0.5rem);
+    transition: border-color 0.5s ease;
+    -webkit-transition: border-color 0.5s ease;
+}
+
+.p:hover h2::before,
+.p:hover h2::after {
+    border-color: var(--content-color);
 }
 
 .p0 {
     background-color: var(--bgfiltercolor);
+}
+
+.p0 h2 {
+    margin-top: 10px;
 }
 
 .p1 {
@@ -95,18 +125,20 @@ ul li:before {
     pointer-events: none;   
 }
 
-.header_text {
+.header_text > h1 {
     font: bold 24pt sans-serif;
+    color: var(--header_textcolor);
     -webkit-text-stroke-width: 1.5px;
     -webkit-text-stroke-color: black;
     cursor: default;
+    margin: 0 auto;
 }
 
 .bgimg {
     background-image: var(--body_bgimg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center top;
+    background-position: center center;
 }
 
 .flex {
@@ -331,4 +363,33 @@ footer {
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
     display: block;
+}
+
+@keyframes lightup {
+    from { 
+        color: black;
+        text-shadow: none;
+    }
+    to { 
+        color: var(--contentcolor);
+        text-shadow: 0px 0px 5px var(--contentcolor);
+    }
+}
+
+.p img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    position: center;
+    border: 3px solid var(--contentcolor);
+    border-radius: 3px;
+    transition: transform 1s;
+    -webkit-transition: transform 1s;
+    max-height: 500px;
+    max-width: 900px;
+}
+
+.p img:hover {
+    transform: scale(2);
 }
