--- a/res/styles.css
+++ b/res/styles.css
@@ -87,6 +87,7 @@ h1 {
     transform: translateY(-0.5rem);
     transition: border-color 0.5s ease;
     -webkit-transition: border-color 0.5s ease;
+    z-index: 95;
 }
 
 .p:hover h2::before,
@@ -388,6 +389,7 @@ footer {
     -webkit-transition: transform 1s;
     max-height: 500px;
     max-width: 900px;
+    z-index: 96;
 }
 
 .p img:hover {
