--- a/res/styles.css
+++ b/res/styles.css
@@ -342,7 +342,6 @@ footer {
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  
 }
 
 /* Links inside the dropdown */
@@ -388,7 +387,7 @@ footer {
     -webkit-transition: transform 1s;
     max-height: 500px;
     max-width: 900px;
-    z-index: 96;
+    margin-top: 45px;
 }
 
 .p img:hover {
