--- a/res/styles.css
+++ b/res/styles.css
@@ -170,6 +170,8 @@ a:link {
     color: var(--link);
     text-decoration: none;
     cursor: pointer;
+    transition: color ease 0.5s;
+    -webkit-transition: color ease 0.5s;
 }
 
 a:hover {
@@ -223,6 +225,8 @@ a:visited:focus {
     box-shadow: 0px 0px 16px 8px rgba(0,0,0,0.2);
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: black;
+    transition: background-color ease 0.5s;
+    -webkit-transition: background-color ease 0.5s;
 }
 
 .dlink:hover {
@@ -321,6 +325,8 @@ footer {
     cursor: pointer;
     padding: 2px 5px 2px 5px;
     background-color: rgba(0,0,0,0);
+    transition: background-color ease 0.5s;
+    -webkit-transition: background-color ease 0.5s;
 }
 
 .dropbtn:hover, .dropbtn:focus {
@@ -353,6 +359,8 @@ footer {
     width: 160px;
     border: none;
     display: block;
+    transition: background-color ease 0.5s;
+    -webkit-transition: background-color ease 0.5s;
 }
 
 /* Change color of dropdown links on hover */
@@ -383,8 +391,8 @@ footer {
     width: 50%;
     border: 3px solid var(--contentcolor);
     border-radius: 3px;
-    transition: width ease-in 0.5s;
-    -webkit-transition: width ease-in 0.5s;
+    transition: width ease 1s;
+    -webkit-transition: width ease 1s;
     max-height: 1000px;
     margin-top: 45px;
 }
