--- a/res/styles.css
+++ b/res/styles.css
@@ -18,12 +18,11 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: var(--header_bgcolor);
     color: var(--header_textcolor);
     width: 100%;
     height: var(--header_size);
+    box-shadow: 0px 8px 8px 4px rgba(0,0,0,0.2);
     z-index: 100;
-    box-shadow: 0px 8px 8px 4px rgba(0,0,0,0.2)
 }
 
 ul {
@@ -112,11 +111,13 @@ h1 {
 }
 
 .header {
+    position: relative;
     display: flex;
     height: 100%;
     flex-direction: row;
-    align-items:center;
-    justify-content:space-around;
+    align-items: center;
+    justify-content: space-around;
+    background-color: var(--header_bgcolor);
 }
 
 .headeritem {
@@ -331,6 +332,7 @@ footer {
     background-color: rgba(0,0,0,0);
     transition: background-color ease 0.5s;
     -webkit-transition: background-color ease 0.5s;
+    margin: 0 auto;
 }
 
 .dropbtn .headeritem {
@@ -354,12 +356,16 @@ footer {
 }
 
 .dropdown-content {
-    display: none;
+    display: block;
     position: absolute;
     margin-top: 6px;
+    top:-90px;
+    z-index:-1;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    transition: top ease-in-out 1s;
+    -webkit-transition: top ease-in-out 1s;
 }
 
 /* Links inside the dropdown */
@@ -382,7 +388,7 @@ footer {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
-    display: block;
+    top: 48px;
 }
 
 @keyframes lightup {
