--- a/res/styles.css
+++ b/res/styles.css
@@ -364,8 +364,8 @@ footer {
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    transition: top ease-in-out 1s 0.5s;
-    -webkit-transition: top ease-in-out 1s 0.5s;
+    transition: top ease-in-out 0.5s;
+    -webkit-transition: top ease-in-out 0.5s;
 }
 
 /* Links inside the dropdown */
