--- a/res/styles.css
+++ b/res/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--body_bgcolor);
     color: var(--body_textcolor);
